--- a/_config.yml
+++ b/_config.yml
@@ -17,18 +17,21 @@ baseurl: ""
 title: Manolo's blog
 
 # Short description of your site
-description: In this blog, I will be writing and sharing links on data science. 
+description: A virtual proof that name is awesome!
+
+#In this blog, I will be writing and sharing links on data science. 
+#I have an extremely very academic background. I was initially a pilot, then I decided to study Mathematics and Economics.
 
 # --- Navigation bar options --- #
 
 # List of links in the navigation bar
 navbar-links:
-  About Me: "I have an extremely very academic background. I was initially a pilot, then I decided to study Mathematics and Economics."
+  About Me: "aboutme"
   Resources:
     - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
     - Learn markdown: "http://www.markdowntutorial.com/"
     - GitHub Pages: "https://pages.github.com/"
-  Author's home: "http://deanattali.com"
+#  Author's home: "http://deanattali.com"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
