--- a/_config.yml
+++ b/_config.yml
@@ -17,10 +17,10 @@ baseurl: ""
 title: Manolo's blog
 
 # Short description of your site
-description: A virtual proof that name is awesome!
+description: A virtual proof that name is cool!
 
-#In this blog, I will be writing and sharing links on data science. 
-#I have an extremely very academic background. I was initially a pilot, then I decided to study Mathematics and Economics.
+# In this blog, I will be writing and sharing links on data science. 
+# I have an extremely very academic background. I was initially a pilot, then I decided to study Mathematics and Economics.
 
 # --- Navigation bar options --- #
 
@@ -28,7 +28,7 @@ description: A virtual proof that name is awesome!
 navbar-links:
   About Me: "aboutme"
   Resources:
-    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
+#   - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
     - Learn markdown: "http://www.markdowntutorial.com/"
     - GitHub Pages: "https://pages.github.com/"
 #  Author's home: "http://deanattali.com"
