--- a/_config.yml
+++ b/_config.yml
@@ -127,7 +127,7 @@ url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
 # --- Comments --- #
 
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-disqus: "Manolo"
+disqus: "disqus_0jHVN8M2yn"
 
 # To use Facebook Comments, fill in a Facebook App ID
 # fb_comment_id: ""
